# course-work-1

./: .gitignore  build.sh  logs.sh  map-1.blend  project.org
shaders/: #shader.vert#  debug.frag  debug.vert  debug_frag.spv  mesh.frag  mesh_frag.spv  mesh_vert.spv  shader.vert  texture.frag  texture.vert  texture_frag.spv  texture_vert.spv  vert.spv
src/: CMakeLists.txt  application.cpp  application.hpp  camera.hpp  cars_ai.cpp  cars_ai.hpp  cars_physics.cpp  cars_physics.hpp  debug_renderer.cpp  debug_renderer.hpp  exception.hpp  imgui_renderer.cpp  imgui_renderer.hpp  instance_renderer.cpp  instance_renderer.hpp  logs.cpp  logs.hpp  main.cpp  main.hpp  map_borders.cpp  map_borders.hpp  map_loader.cpp  map_loader.hpp  mesh_renderer.cpp  mesh_renderer.hpp  nn.cpp  nn.hpp  render_structs.cpp  render_structs.hpp  renderpass_collection.cpp  renderpass_collection.hpp  road_collider.cpp  road_collider.hpp  simulation.cpp  simulation.hpp  texture_renderer.cpp  texture_renderer.hpp  transform.hpp  vulkan_application.cpp  vulkan_application.hpp  (+2 more)
src/vk/: barrier.hpp  buffer.cpp  buffer.hpp  buffer_barrier.cpp  buffer_barrier.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  device_memory.cpp  device_memory.hpp  image.cpp  image.hpp  image_barrier.cpp  image_barrier.hpp  image_view.cpp  image_view.hpp  memory_barrier.cpp  memory_barrier.hpp  memory_object.cpp  memory_object.hpp  semaphore.cpp  semaphore.hpp  staging_buffer.cpp  staging_buffer.hpp  swapchain.cpp  swapchain.hpp  templates.cpp  templates.hpp  texture.cpp  texture.hpp  vulkan.hpp
